Additional input labels visibility fix

--- a/src/app/views/poc-super-admins/super-admin-details/poc-main-admin/poc-main-admin.component.scss
+++ b/src/app/views/poc-super-admins/super-admin-details/poc-main-admin/poc-main-admin.component.scss
@@ -67,8 +67,7 @@
     display: flex;
 }
 
-.is-main-admin,
-.is-main-admin:hover {
+.is-main-admin {
     background-color: #d4edda !important;
     color: #155724;
     font-weight: 500;
