--- a/src/app/views/poc-super-admins/super-admin-details/super-admin-details.component.scss
+++ b/src/app/views/poc-super-admins/super-admin-details/super-admin-details.component.scss
@@ -30,7 +30,7 @@ h3 {
 
 ::ng-deep .locationIdButton {
     height: 2rem;
-    margin-top: -1rem;
+    margin-top: 1rem;
     line-height: 14px;
 }
 
